# TSLies

./: .gitignore  README.md  pyproject.toml
example/: main.py
tslies/: __init__.py  config.py  dataset.py  explainability.py  paths.py  plotter.py  trigger.py  utils.py
tslies.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tslies/background/: abnnpredictor.py  bnnpredictor.py  ffnnpredictor.py  knnpredictors.py  losses.py  mcmcbnnpredictor.py  mlobject.py  pbnnpredictor.py  rnnpredictor.py  spectraldomainffnnpredictor.py
tslies/example/: ats_integration.py  catalogs.py  example_config.py  main.py
tslies/example/catalogs/: EP.fits  FermiGBMBurstCat.fits  FermiGBMTrig.fits  FermiGBMTrig.txt  PerANDREA_EP.txt  PerANDREA_SVOM.txt  SVOM.fits  SWIFT.txt  total_catalog.fits
tslies/examples/: __init__.py
tslies/examples/example1/: __init__.py  ats_integration.py
tslies/examples/example2/: catalogs.py  example_config.py  main.py
tslies/examples/example3/: __init__.py  main.ipynb
