[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tslies"
version = "0.1.0"
description = "TSLies: A package for time series analysis and background prediction using neural networks."
authors = [
    {name = "Andrea Adelfio"}
]
dependencies = [
    "keras==3.7.0",
    "matplotlib==3.8.4",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scikit-learn==1.4.2",
    "scipy==1.13.1",
    "seaborn==0.13.2",
    "tensorflow==2.18.0",
    "tensorflow-probability==0.25.0",
    "tf_keras==2.18.0",
    "tqdm==4.66.4"
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["tslies", "tslies.background", "tslies.example"]